--- a/style.css
+++ b/style.css
@@ -45,4 +45,28 @@ nav ul li :hover{
 
 }
 
+h1{
+	color: white;
+	font-weight: bold;
+	margin-top:30px;
+	margin-left:5px;
+	position: relative; 
+
+}
+
+span{
+	color:	#C0C0C0;
+}
+
+
+.textbox{
+	margin-top: 0;
+	background-image: url("https://i.pinimg.com/564x/fd/e1/6b/fde16bb3d450d9da747eeb21c7360884.jpg");
+    height: 900px;
+    background-repeat: no-repeat;
+    background-size: cover; 
+   
+
+}
+
 
