--- a/style.css
+++ b/style.css
@@ -69,4 +69,44 @@ span{
 
 }
 
+.textbox h2{
+	font-weight: bold;
+	font-size:33px;
+	color: white;
+    top:39%;
+    left:21%;
+    text-align: center;
+    position: absolute;
+    letter-spacing: 2px;
+    word-spacing: 6px;
+
+
+}
+
+.textbox p{
+	color: white;
+	font-size: 14px;
+	margin: 14px 0 40px;
+    top:54%;
+    left:25%;
+    text-align: center;
+    position: absolute;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+
+
+}
+.button{
+	text-decoration: none;
+	border: 2px solid lightgray;
+	background-color: transparent;
+	position: relative;
+	top:58%;
+	left: 43%;
+	padding: 12px 15px;
+	color: white;
+	letter-spacing: 1px;
+    word-spacing: 2px;
+}
+
 
