--- a/style.css
+++ b/style.css
@@ -114,4 +114,21 @@ span{
 	transition: .5s;
 
 }
+.section-2{
+	width: 100%;
+	margin: auto;
+	display: inline;
+	text-align: center;
+}
+section-2 p{
+	font-size: 13px;
+	font-weight: 200;
+	color: darkgray;
+}
+.section h2 {
+	font-size: 20px;
+	text-align: center;
+	font-weight: bold;
+	position:center;
 
+}
