--- a/style.css
+++ b/style.css
@@ -155,3 +155,22 @@ section-2 p{
 
 
 }
+.build img{
+	  margin:0 30px;
+      width: 300px;
+      height: 450px;
+      padding: 25px;
+      border-radius: 15px;
+      background-color: rgba(213, 193, 170, 0.7);
+       
+}
+.arch img{
+	  margin:0 30px;
+      width: 300px;
+      height: 450px;
+      padding: 25px;
+      border-radius: 15px;
+      background-color: rgba(213, 193, 170, 0.7);
+     
+
+}
