--- a/style.css
+++ b/style.css
@@ -424,4 +424,62 @@ span{
          margin-bottom:40px;
           padding-bottom: 30px;
  }
- 
+ .input-row{
+ 	display: flex;
+ 	justify-content: space-between;
+ 	margin-bottom: 20px;	
+ }
+
+.input-row .inputgroup{
+	flex-basis: 45%;
+
+}
+
+input{
+	width: 100%;
+	border: none;
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 5px;
+	outline: none;
+}
+textarea{
+	width: 100%;
+	border: 1px solid #ccc;
+	padding: 10px;
+	outline: none;
+	box-sizing: border-box;
+} 
+
+label{
+	margin-bottom: 6px;
+	display: block;
+	color: #696660 ;
+
+}
+button{
+	background-color:#696660 ;
+	width: 100px;
+	border: none;
+	outline: none;
+	color: white;
+	height: 35px;
+	border-radius: 30px;
+	margin-top: 20px;
+	box-shadow: 0px 5px 10px 6px rgba(105, 102, 96, 0.3);
+
+}
+
+.contact-left h3{
+	color: #696660 ;
+	font-weight: 600;
+	margin-bottom: 30px;
+}
+
+tr td:first-child{
+	padding-right: 20px;
+}
+
+tr td{
+	padding-top: 20px;
+}
+
